# woolf-intertextuality

./: .coverage  .coverage.NicolasacStudio.localdomain.8698.XYGKmwxx  .env  .env.example  .gitignore  README.md  conftest.py  example_intertextual_analysis_expert_prompt_gpt-4o_20241118T210115.csv  intertextual_analysis_20241112T205009.csv  pyproject.toml  pytest.ini  requirements.txt  results.csv  ruff.toml  setup.py
.github/workflows/: lint.yml  test.yml
config/: config.yaml
data/evaluation/: annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T132752.csv  annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T132858.csv  annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T140758.csv  annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T141425.csv  annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T141815.csv  annotation_ready_intertextual_analysis_expert_prompt_gpt-4o_20241225T142911.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T132752.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T132858.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T140758.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T141425.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T141815.csv  answer_key_intertextual_analysis_expert_prompt_gpt-4o_20241225T142911.csv
data/raw/: mrs_dalloway.txt  odyssey_butcher.txt
data_src/: mrs_dalloway_processed.txt  odyssey_butcher_processed.txt
notes/: graphrag_and_contextual_headers.md  paper_structure.md  prompt_engineering_and_model_selection.md  system_prompt_design.md
scripts/: 01_check_tokens.ipynb  GraphRAG_v1.ipynb  odyssey_chapman.txt
scripts/01_data_preperation/: 01_check_tokens.ipynb  01_document-intelligence_ocr.ipynb  preprocess_dalloway.py  preprocess_odyssey.py
scripts/02_create_vector_store/: setup_vector_db.py
scripts/03_vector_search/: find_similar_vectors.py
src/: main.py
src/analysis/: find_similar_vectors.py
src/config/: settings.py
src/data_preparation/: __init__.py  data_manager.py  preprocess_dalloway.py  preprocess_odyssey.py  preprocessed_data_store.py  preprocessing.py
src/embeddings/: openai_embedder.py
src/evaluation/: agreement.py  create_eval_csv.py  prepare_annotation_data.py
src/models/: __init__.py  schemas.py
src/pipeline/: intertextuality_pipeline.py  orchestrator.py  pipeline_facade.py
src/prompts/: __init__.py  generator.py  intertextual_analysis.py  system_prompt.txt  system_prompt_scholarly.txt
src/utils/: text_preprocessor.py  text_processing.py  token_counter.py
tests/: conftest.py  test_data_preparation.py  test_embeddings.py  test_orchestrator.py  test_pipeline_steps.py
(+12 files in other folders)
