[project]
name = "woolf-intertextuality"
version = "0.1.0"
description = "Detecting intertextuality between Mrs Dalloway and The Odyssey using RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client",
    "sentence-transformers",
    "openai",
    "transformers",
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "nltk",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "qdrant-haystack>=7.0.0",
    "haystack-ai>=2.7.0",
    "rich>=13.9.4",
    "jinja2>=3.0.0",
]
