[project]
name = "woolf-intertextuality"
version = "0.1.0"
description = "Detecting intertextuality between Mrs Dalloway and The Odyssey using RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qdrant-client",
    "openai",
    "numpy",
    "pandas",
    "matplotlib",
    "nltk",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "qdrant-haystack>=7.0.0",
    "haystack-ai>=2.7.0",
    "rich>=13.9.4",
    "jinja2>=3.0.0",
    "scikit-learn>=1.6.0",
    "krippendorff>=0.8.0",
]
